comment section updated

--- a/CourseWork/Views/Collection/EditCollection.cshtml
+++ b/CourseWork/Views/Collection/EditCollection.cshtml
@@ -157,7 +157,7 @@
 			}
 		});
 
-		$(document).on("click", "#remove", function () {
+		$(document).on("click", "#remove", () => {
 			$(this).parent().remove();
 		});
 	</script>
