--- a/CourseWork/Views/Shared/CommentsPartial.cshtml
+++ b/CourseWork/Views/Shared/CommentsPartial.cshtml
@@ -1,19 +1,18 @@
-﻿@if (User.Identity.IsAuthenticated)
+﻿<hr />
+@if (User.Identity.IsAuthenticated)
 {
-	<div class="container overflow-hidden text-center comment">
-		<div class="row">
-			<div class="col-8">
-				<input class="form-control" type="text" placeholder="Оставить коментарий" id="comment">
-			</div>
-			<div class="col-4">
-				<input class="btn btn-outline-primary d-flex justify-content-start" type="submit" value="Отправить" id="sendComment">
-			</div>
+	<div class="row">
+		<div class="col-9 col-md-10">
+			<input class="form-control" type="text" placeholder="Оставить коментарий" id="comment">
+		</div>
+		<div class="col-3 col-md-2">
+			<input class="btn btn-outline-primary" type="submit" value="Отправить" id="sendComment">
 		</div>
 	</div>
 }
 else
 {
-	<div class="comment">
+	<div>
 		<p>Чтобы оставлять комментарии <a href="/Account/Login">авторизируйтесь</a></p>
 	</div>
 }
