updated display of items in collections

--- a/CourseWork/Pages/Index.cshtml
+++ b/CourseWork/Pages/Index.cshtml
@@ -33,7 +33,7 @@
 			<partial name="_collectionPartial" for="@col" />
 		}
 	</div>
-	<div>
+	<div class="ml-2">
 		<partial name="_paginationPartial" for="@Model.IndexViewModel.Pagination" />
 	</div>
 }
