--- a/CourseWork/Views/Shared/_Layout.cshtml
+++ b/CourseWork/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="~/js/lazyload.min.js"></script>
+	<script src="https://kit.fontawesome.com/d2ecb10fc6.js" crossorigin="anonymous"></script>
 	@RenderSection("Scripts", required: false)
 </body>
 </html>
