--- a/CourseWork/Views/Shared/itemsPartial.cshtml
+++ b/CourseWork/Views/Shared/itemsPartial.cshtml
@@ -1,16 +1,34 @@
-﻿@model List<CourseWork.Domain.Entities.Item>
+﻿@model List<CourseWork.Domain.ViewModels.Item.ItemViewModel>
 
-<div class="container">
-	@if (!Model.Any())
-	{
-		<h4 class="text-center">Коллекция пуста</h4>
-	}
-	else
-	{
-		<h3 class="text-center">Айтемы</h3>
-		@foreach (var item in Model)
-		{
-			<a class="list-group-item list-group-item-action list-group-item-light" href="/Item/GetItem/@item.Id">@item.Name</a>
-		}
-	}
-</div>
+@if (Model.Any())
+{
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <a href="/Item/GetItem/@item.Id" class="col-xs-12 col-sm-6 col-md-6 col-lg-4 p-2">
+                <div class="gallery-item" style="border: 1px solid black; padding: 0;">
+                    <div class="object-fit">
+                        <img src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
+                     data-src="@item.ImgRef"
+                     alt="image"
+                     class="lazy">
+                    </div>
+                    <div class="gallery-item-info">
+                        <ul>
+                            <li class="gallery-item-likes">
+                                <span class="visualy-hidden">Likes: <i class="fa-solid fa-heart"></i> @item.LikesCount</span>
+                            </li>
+							<li class="gallery-items-comments">
+								<span class="visualy-hidden">Comments: <i class="fa-solid fa-comment"></i> @item.CommentsCount</span>
+							</li>
+                        </ul>
+                    </div>
+                </div>
+            </a>
+        }
+    </div>
+}
+else
+{
+    <h3 class="text-center">No items</h3>
+}
