--- a/CourseWork/Views/Item/GetItem.cshtml
+++ b/CourseWork/Views/Item/GetItem.cshtml
@@ -8,7 +8,7 @@
 	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 text-center">
 
 		<div class="parent">
-			<img class="image lazy"
+			<img class="cover lazy"
 				 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
 				 data-src="@Model.ImgRef"
 				 onError="this.src='/images/imgnotfound.jpg'"
