--- a/CourseWork/Views/Shared/itemsPartial.cshtml
+++ b/CourseWork/Views/Shared/itemsPartial.cshtml
@@ -9,9 +9,9 @@
                 <div class="gallery-item" style="border: 1px solid black; padding: 0;">
                     <div class="object-fit">
                         <img src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
-                     data-src="@item.ImgRef"
-                     alt="image"
-                     class="lazy">
+                             data-src="@item.ImgRef"
+                             alt="image"
+                             class="lazy item-cover">
                     </div>
                     <div class="gallery-item-info">
                         <ul>
