--- a/CourseWork/Views/Shared/_collectionPartial.cshtml
+++ b/CourseWork/Views/Shared/_collectionPartial.cshtml
@@ -1,9 +1,9 @@
 ﻿@model CourseWork.Domain.Entities.Collection
 
-<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+<div class="col-10 col-sm-10 col-md-6 col-lg-4">
     <div class="card m-2">
-        <div class="parent">
-            <img class="lazy image"
+        <div class="object-fit">
+            <img class="lazy collection-cover"
                  src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
                  data-src="@Model.ImgRef"
                  onError="this.src='/images/imgnotfound.jpg'"
