--- a/CourseWork/Views/Item/GetItem.cshtml
+++ b/CourseWork/Views/Item/GetItem.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
 	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 text-center">
 
-		<div class="parent">
+		<div class="object-fit">
 			<img class="cover lazy"
 				 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
 				 data-src="@Model.ImgRef"
