added admin panel

--- a/CourseWork/Pages/Index.cshtml
+++ b/CourseWork/Pages/Index.cshtml
@@ -51,6 +51,7 @@
 	</form>
 </div>
 
+<h3 class="text-center text-dark" id="message"></h3>
 @if (Model.IndexViewModel.Collections.Any())
 {
 	<div class="row">
