--- a/CourseWork/Views/Profile/Index.cshtml
+++ b/CourseWork/Views/Profile/Index.cshtml
@@ -11,9 +11,9 @@
 			<a class="list-group-item list-group-item-action list-group-item-danger" href="/Admin">Админка</a>
 		}
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Collection/CreateCollection">Создать коллекцию</a>
-		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Мои коллекции</a>
+		<a class="list-group-item list-group-item-action list-group-item-light" href="/Collection/MyCollections">Мои коллекции</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Item/CreateItem">Создать айтем</a>
-		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Мои айтемы</a>
+		<a class="list-group-item list-group-item-action list-group-item-light" href="/Item/MyItems">Мои айтемы</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Account/ChangePassword">Поменять пароль</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/Settings/@Model.Id">Редактирование профиля</a>
 	</div>
