--- a/CourseWork/Views/Profile/Index.cshtml
+++ b/CourseWork/Views/Profile/Index.cshtml
@@ -19,11 +19,11 @@
 	</div>
 	<div class="col-md-6  text-center">
 		<div class="d-flex justify-content-center m-3">
-			<div class="parent">
+			<div class="object-fit">
 				<img class="avatar lazy"
-					 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
+					 src="/images/thumbnail.png"
 					 data-src="@Model.ImgRef"
-					 onError="this.src='/images/avatar.png'"
+					 onError="this.src='/images/person.svg'"
 					 alt="avatar_logo">
 			</div>
 		</div>
