--- a/CourseWork/Views/Shared/_Layout.cshtml
+++ b/CourseWork/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"]</title>
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="~/css/site.css?v=101" />
+	<link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
 	<header>
@@ -40,7 +40,7 @@
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="~/js/lazyload.min.js"></script>
 	<script src="https://kit.fontawesome.com/d2ecb10fc6.js" crossorigin="anonymous"></script>
-
+	
 	@RenderSection("Scripts", required: false)
 </body>
 </html>
