--- a/CourseWork/Views/Profile/Settings.cshtml
+++ b/CourseWork/Views/Profile/Settings.cshtml
@@ -8,11 +8,11 @@
 <div class="container text-center custom-group-form">
 
 	<div class="d-flex justify-content-center m-4">
-		<div class="parent">
+		<div class="object-fit">
 			<img class="avatar lazy"
-				 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
+				 src="/images//thumbnail.png"
 				 data-src="@Model.ImgRef"
-				 onError="this.src='/images/avatar.png'"
+				 onError="this.src='/images/person.svg'"
 				 alt="avatar_logo">
 		</div>
 	</div>
