switch to bootstrap 5.3.0

--- a/CourseWork/Pages/Index.cshtml
+++ b/CourseWork/Pages/Index.cshtml
@@ -102,7 +102,7 @@ else if (Model.IndexViewModel.Items.Any())
 			</div>
 		}
 	</div>
-	<div class="ml-2">
+	<div class="ms-2">
 		<partial name="_paginationPartial" for="@Model.IndexViewModel.Pagination" />
 	</div>
 }
@@ -117,5 +117,4 @@ else
 			elements_selector: ".lazy"
 		});
 	</script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 }
