--- a/CourseWork/Views/Shared/CommentsPartial.cshtml
+++ b/CourseWork/Views/Shared/CommentsPartial.cshtml
@@ -20,4 +20,6 @@ else
 <div class="row">
 	<div class="list-group col-12 pl-3" id="comments"></div>
 </div>
-<div class="text-center"><button id="showMore" style="display: none;">Показать еще</button></div>
+<div class="text-center">
+	<button class="btn btn-secondary" id="showMore" style="display: none;">Показать еще</button>
+</div>
