--- a/CourseWork/Views/Account/ChangePassword.cshtml
+++ b/CourseWork/Views/Account/ChangePassword.cshtml
@@ -8,15 +8,15 @@
     <form asp-action="ChangePassword" asp-controller="Account" method="post">
         <div class="validation" asp-validation-summary="All"></div>
 
-		<div class="form-group">
+        <div class="mb-3">
 			<input class="form-control" asp-for="Name" type="text" value="@User.Identity.Name" readonly />
 		</div>
 
-        <div class="form-group">
+        <div class="mb-3">
             <input class="form-control" asp-for="NewPassword" placeholder="новый пароль" />
         </div>
 
-        <div class="form-group">
+        <div class="mb-3">
             <input class="form-control" asp-for="ConfirmPassword" placeholder="повторите новый пароль" />
         </div>
 
