--- a/CourseWork/Views/Account/Login.cshtml
+++ b/CourseWork/Views/Account/Login.cshtml
@@ -10,11 +10,11 @@
 	<form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
 		<div class="validation" asp-validation-summary="All"></div>
 
-		<div class="form-group">
+		<div class="mb-3">
 			<label asp-for="Name">Введите логин</label><br />
 			<input class="form-control" type="text" asp-for="Name" placeholder="Имя" />
 		</div>
-		<div class="form-group">
+		<div class="mb-3">
 			<label asp-for="Password">Введите пароль</label><br />
 			<input class="form-control" asp-for="Password" placeholder="пароль" />
 		</div>
