--- a/CourseWork/Views/Account/Register.cshtml
+++ b/CourseWork/Views/Account/Register.cshtml
@@ -8,15 +8,15 @@
 	<form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
 		<div class="validation" asp-validation-summary="All"></div>
 
-		<div class="form-group">
+		<div class="mb-3">
 			<label asp-for="Name">Введите логин</label><br />
 			<input class="form-control" type="text" asp-for="Name" placeholder="Имя" />
 		</div>
-		<div class="form-group">
+		<div class="mb-3">
 			<label asp-for="Password">Введите пароль</label><br />
 			<input class="form-control" asp-for="Password" placeholder="Пароль" />
 		</div>
-		<div class="form-group">
+		<div class="mb-3">
 			<label asp-for="ConfirmPassword">Повторите пароль</label><br />
 			<input class="form-control" asp-for="ConfirmPassword" placeholder="Повторите пароль" />
 		</div>
