--- a/CourseWork/Views/Item/CreateItem.cshtml
+++ b/CourseWork/Views/Item/CreateItem.cshtml
@@ -10,22 +10,22 @@
 	<form asp-action="CreateItem" asp-controller="Item" enctype="multipart/form-data" method="post">
 		<div class="validation" asp-validation-summary="All"></div>
 
-		<div class="form-group">
+		<div class="mb-3">
 			<label asp-for="Name">Название айтема</label><br />
 			<input class="form-control" type="text" asp-for="Name" />
 		</div>
 
-		<div class="form-group">
+		<div class="mb-3">
 			<label asp-for="Content">Содержание айтема</label><br />
 			<textarea class="form-control" asp-for="Content"></textarea>
 		</div>
 
-		<div class="form-group">
+		<div class="mb-3">
 			<p>Обложка айтема</p>
 			<input type="file" name="image" /><br /><br />
 		</div>
 
-		<div class="form-group">
+		<div>
 			<button class="btn btn-outline-primary">Добавить</button>
 		</div>
 	</form>
