--- a/CourseWork/Views/Item/EditItem.cshtml
+++ b/CourseWork/Views/Item/EditItem.cshtml
@@ -9,17 +9,17 @@
 	<form asp-action="EditItem" asp-controller="Item" enctype="multipart/form-data" method="post">
 		<div class="validation" asp-validation-summary="All"></div>
 
-		<div class="form-group">
+		<div class="mb-3">
 			<label asp-for="Name">Название коллекции</label><br />
 			<input class="form-control" type="text" asp-for="Name" />
 		</div>
 
-		<div class="form-group">
+		<div class="mb-3">
 			<label asp-for="Content">Описание коллекции</label><br />
 			<textarea class="form-control" asp-for="Content"></textarea>
 		</div>
 
-		<div class="form-group">
+		<div class="mb-3">
 			<p>Обложка айтема</p>
 			<input type="file" name="image" /><br /><br />
 		</div>
