--- a/CourseWork/Views/Profile/Index.cshtml
+++ b/CourseWork/Views/Profile/Index.cshtml
@@ -6,16 +6,18 @@
 
 <div class="row">
 	<div class="col-md-6 col-lg-4">
-		@if (User.IsInRole("admin"))
-		{
-			<a class="list-group-item list-group-item-action list-group-item-danger" href="/Admin">Админка</a>
-		}
-		<a class="list-group-item list-group-item-action list-group-item-light" href="/Collection/CreateCollection">Создать коллекцию</a>
-		<a class="list-group-item list-group-item-action list-group-item-light" href="/Collection/MyCollections">Мои коллекции</a>
-		<a class="list-group-item list-group-item-action list-group-item-light" href="/Item/CreateItem">Создать айтем</a>
-		<a class="list-group-item list-group-item-action list-group-item-light" href="/Item/MyItems">Мои айтемы</a>
-		<a class="list-group-item list-group-item-action list-group-item-light" href="/Account/ChangePassword">Поменять пароль</a>
-		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/Settings/@Model.Id">Редактирование профиля</a>
+		<div class="list-group">
+			@if (User.IsInRole("admin"))
+			{
+				<a class="list-group-item list-group-item-action list-group-item-danger" href="/Admin">Админка</a>
+			}
+			<a class="list-group-item list-group-item-action list-group-item-light" href="/Collection/CreateCollection">Создать коллекцию</a>
+			<a class="list-group-item list-group-item-action list-group-item-light" href="/Collection/MyCollections">Мои коллекции</a>
+			<a class="list-group-item list-group-item-action list-group-item-light" href="/Item/CreateItem">Создать айтем</a>
+			<a class="list-group-item list-group-item-action list-group-item-light" href="/Item/MyItems">Мои айтемы</a>
+			<a class="list-group-item list-group-item-action list-group-item-light" href="/Account/ChangePassword">Поменять пароль</a>
+			<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/Settings/@Model.Id">Редактирование профиля</a>
+		</div>
 	</div>
 	<div class="col-md-6  text-center">
 		<div class="d-flex justify-content-center m-3">
