--- a/CourseWork/Views/Profile/Settings.cshtml
+++ b/CourseWork/Views/Profile/Settings.cshtml
@@ -19,11 +19,11 @@
 
 	<form asp-action="Settings" asp-controller="Profile" enctype="multipart/form-data" method="post">
 		
-		<div class="form-group">
+		<div class="mb-3">
 			<input asp-for="Username" class="form-control" type="text" value="@Model.Username" readonly />
 		</div>
 
-		<div class="form-group mb-2">
+		<div class="mb-5">
 			<label asp-for="ImgRef">Загрузить свой аватар</label>
 			<input class="form-group" type="file" name="image" />
 		</div>
