--- a/CourseWork/Views/Shared/_Layout.cshtml
+++ b/CourseWork/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 			<div class="container">
 				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CourseWork</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -39,8 +39,7 @@
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="~/js/lazyload.min.js"></script>
-	<script src="https://kit.fontawesome.com/d2ecb10fc6.js" crossorigin="anonymous"></script>
-	
+
 	@RenderSection("Scripts", required: false)
 </body>
 </html>
